# one-holy-bible

./: .gitignore  .ohb-public-managed.json  CONTRIBUTING.md  DATA_SOURCES.md  LICENSE  PUBLIC_RELEASE.json  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vite.public.config.ts
.github/workflows/: ci.yml
docs/: GitHub更新与发布指南【codex】.md
docs/releases/: 2026-07-14-v0.1.0-release-notes【codex】.md  2026-07-15-v0.2.0-release-notes【codex】.md
docs/verification/: 2026-07-14-github-text-first-release-verification【codex】.md  2026-07-15-v0.2.0-public-release-verification【codex】.md
public/data/: asset-manifest.json  manifest.json
scripts/: generatePublicBibleData.mjs  generatePublicBibleData.test.mjs  validatePublicData.mjs  validatePublicData.test.mjs  validatePublicRelease.mjs  validatePublicRelease.test.mjs  validatePublicRepository.mjs  validatePublicRepository.test.mjs
src/: App.test.tsx  App.tsx  projectIdentity.test.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Workbench.test.tsx  Workbench.tsx
src/data/: loadBibleLibrary.test.ts  loadBibleLibrary.ts  publicBibleData.test.ts  publicBibleData.ts  publicData.test.ts  publicData.ts
src/domain/: bible.ts  bibleBooks.ts  layout.ts  resources.ts  types.test.ts  verse.test.ts  verse.ts  verseId.test.ts
src/lib/: backlinks.test.ts  bibleSearch.test.ts  formatTextResourceBody.test.ts
src/public/: PublicApp.tsx  publicBibleData.ts  publicData.ts  publicNetworkPolicy.ts  releaseMode.ts
(+74 files in other folders)
