[package]
name = "one-holy-bible"
version = "0.1.0"
description = "Local-first Bible study workbench with CUV/KJV reading and verse-linked explanatory cards"
authors = ["Siqiho"]
license = "MIT"
repository = "https://github.com/Siqiho/one-holy-bible"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "one_holy_bible_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
